# routers/images_router.go
@@ -7,6 +7,7 @@ func (router RouterGroup) ImagesRouter() {
 	app := api.ApiGroupApp.ImagesApi
 	// 配置图片相关的路由函数
 	router.GET("images", app.ImageListView)
+	router.GET("images_names", app.ImageNameListView)
 	router.POST("images", app.ImageUploadView)
 	router.DELETE("images", app.ImageRemoveView)
 	router.PUT("images", app.ImageUpdateView)
